# cmake_demo

./: README.md
src/: CMakeLists.txt  main.cpp
src/calc/: CMakeLists.txt  sub.h
